@@ -1,4 +1,5 @@
 v0.5
+(r1234) Fix loading of tactical maps for the Russian Gold version.
 (r1233) Fix wide string/string format specifiers.
 (r1219) Fix two transcription erros in Blt8BPPDataTo16BPPBufferMonoShadowClip(), which is used for blitting text:
         - Do not draw a background pixel, if the background colour is transparent
